[gd_scene load_steps=18 format=2]

[ext_resource path="res://arts/icons/1x/gear.png" type="Texture" id=1]
[ext_resource path="res://fonts/montserrat/static/Montserrat-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/montserrat/static/Montserrat-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://arts/icons/1x/backward.png" type="Texture" id=4]
[ext_resource path="res://fonts/montserrat/static/Montserrat-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/home/home.gd" type="Script" id=6]
[ext_resource path="res://arts/icons/1x/forward.png" type="Texture" id=7]

[sub_resource type="VisualShaderNodeInput" id=4]
output_port_for_preview = 0
input_name = "uv2"

[sub_resource type="VisualShaderNodeScalarFunc" id=5]
output_port_for_preview = 0
function = 0

[sub_resource type="VisualShaderNodeScalarOp" id=6]

[sub_resource type="VisualShader" id=7]
code = "shader_type canvas_item;



void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"
graph_offset = Vector2( 174.692, 66.4569 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 620, 80 )
nodes/fragment/2/node = SubResource( 4 )
nodes/fragment/2/position = Vector2( 80, 120 )
nodes/fragment/3/node = SubResource( 5 )
nodes/fragment/3/position = Vector2( 240, 100 )
nodes/fragment/4/node = SubResource( 6 )
nodes/fragment/4/position = Vector2( 460, 80 )
nodes/fragment/connections = PoolIntArray( 3, 0, 4, 0 )

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform float brightness : hint_range(0.001, 2.0) = 1.0;
uniform float anchor : hint_range(-1.0,0.0) = -0.5;
//The point where all the lines come from.
uniform float speed_scale = 1.0;
uniform float fov : hint_range(0.001, 1.0) = 0.2;
uniform float line_count = 1.0;
uniform vec4 background_color : hint_color = vec4(0.0, 0.1, 0.2, 1.0);
uniform vec4 grid_color : hint_color = vec4(1.0, 0.5, 1.0, 1.0);

float grid(vec2 uv, float batt) {
    vec2 size = vec2(uv.y, uv.y * uv.y * 0.2) * 0.01* (batt + 0.05);
    uv += vec2(0.0, TIME * speed_scale);
    uv = abs(fract(uv) - 0.5);
 	vec2 lines = smoothstep(size, vec2(0.0), uv);
 	lines += smoothstep(size * 5.0, vec2(0.0), uv) * 0.4 * batt;
    return lines.x + lines.y;
}
void fragment() {
	vec2 uv = UV;
	vec4 col = background_color;
    uv.y = 3.0 / (abs(uv.y + fov) + 0.05);
	uv.x += anchor;
    uv.x *= uv.y * line_count;
    float gridVal = grid(uv, brightness);
    col = mix(background_color, grid_color, gridVal);
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/brightness = 1.0
shader_param/anchor = -0.5
shader_param/speed_scale = 1.0
shader_param/fov = 0.2
shader_param/line_count = 1.0
shader_param/background_color = Color( 0, 0.1, 0.2, 1 )
shader_param/grid_color = Color( 0.501961, 0.741176, 1, 1 )

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 5 )

[node name="home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.337255, 0.368627, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="spacer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 375.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="appbar" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 375.0
margin_bottom = 154.0

[node name="padding" type="HBoxContainer" parent="VBoxContainer/appbar"]
margin_right = 40.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )

[node name="Label" type="Label" parent="VBoxContainer/appbar"]
margin_left = 44.0
margin_top = 7.0
margin_right = 126.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "TEEM"

[node name="flex" type="HBoxContainer" parent="VBoxContainer/appbar"]
margin_left = 130.0
margin_right = 277.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/appbar"]
margin_left = 281.0
margin_right = 331.0
margin_bottom = 50.0
texture_normal = ExtResource( 1 )

[node name="padding2" type="HBoxContainer" parent="VBoxContainer/appbar"]
margin_left = 335.0
margin_right = 375.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )

[node name="spacer2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 158.0
margin_right = 375.0
margin_bottom = 258.0
rect_min_size = Vector2( 0, 100 )

[node name="number" type="CenterContainer" parent="VBoxContainer"]
margin_top = 262.0
margin_right = 375.0
margin_bottom = 283.0

[node name="Label" type="Label" parent="VBoxContainer/number"]
margin_left = 131.0
margin_right = 244.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "team number"

[node name="membersbar" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 287.0
margin_right = 375.0
margin_bottom = 337.0

[node name="flex2" type="HBoxContainer" parent="VBoxContainer/membersbar"]
margin_right = 80.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="prev" type="TextureButton" parent="VBoxContainer/membersbar"]
margin_left = 84.0
margin_right = 134.0
margin_bottom = 50.0
texture_normal = ExtResource( 4 )

[node name="padding3" type="HBoxContainer" parent="VBoxContainer/membersbar"]
margin_left = 138.0
margin_right = 178.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )

[node name="Label" type="Label" parent="VBoxContainer/membersbar"]
margin_left = 182.0
margin_top = 12.0
margin_right = 193.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "2"

[node name="padding4" type="HBoxContainer" parent="VBoxContainer/membersbar"]
margin_left = 197.0
margin_right = 237.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )

[node name="next" type="TextureButton" parent="VBoxContainer/membersbar"]
margin_left = 241.0
margin_right = 291.0
margin_bottom = 50.0
texture_normal = ExtResource( 7 )

[node name="flex3" type="HBoxContainer" parent="VBoxContainer/membersbar"]
margin_left = 295.0
margin_right = 375.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="art" type="CenterContainer" parent="VBoxContainer"]
margin_top = 341.0
margin_right = 375.0
margin_bottom = 362.0

[node name="Label" type="Label" parent="VBoxContainer/art"]
margin_left = 153.0
margin_right = 222.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "team art"

[node name="membersbar2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 366.0
margin_right = 375.0
margin_bottom = 416.0

[node name="flex2" type="HBoxContainer" parent="VBoxContainer/membersbar2"]
margin_right = 80.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="prevart" type="TextureButton" parent="VBoxContainer/membersbar2"]
margin_left = 84.0
margin_right = 134.0
margin_bottom = 50.0
texture_normal = ExtResource( 4 )

[node name="padding3" type="HBoxContainer" parent="VBoxContainer/membersbar2"]
margin_left = 138.0
margin_right = 178.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )

[node name="Label" type="Label" parent="VBoxContainer/membersbar2"]
margin_left = 182.0
margin_top = 12.0
margin_right = 193.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "2"

[node name="padding4" type="HBoxContainer" parent="VBoxContainer/membersbar2"]
margin_left = 197.0
margin_right = 237.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )

[node name="nextart" type="TextureButton" parent="VBoxContainer/membersbar2"]
margin_left = 241.0
margin_right = 291.0
margin_bottom = 50.0
texture_normal = ExtResource( 7 )

[node name="flex3" type="HBoxContainer" parent="VBoxContainer/membersbar2"]
margin_left = 295.0
margin_right = 375.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="mode" type="CenterContainer" parent="VBoxContainer"]
margin_top = 420.0
margin_right = 375.0
margin_bottom = 441.0

[node name="Label" type="Label" parent="VBoxContainer/mode"]
margin_left = 161.0
margin_right = 213.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
text = "mode"
uppercase = true

[node name="membersbar3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 445.0
margin_right = 375.0
margin_bottom = 495.0

[node name="flex2" type="HBoxContainer" parent="VBoxContainer/membersbar3"]
margin_right = 46.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="prevmode" type="TextureButton" parent="VBoxContainer/membersbar3"]
margin_left = 50.0
margin_right = 100.0
margin_bottom = 50.0
texture_normal = ExtResource( 4 )

[node name="padding3" type="HBoxContainer" parent="VBoxContainer/membersbar3"]
margin_left = 104.0
margin_right = 144.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )

[node name="Label" type="Label" parent="VBoxContainer/membersbar3"]
margin_left = 148.0
margin_top = 12.0
margin_right = 227.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "Endless"

[node name="padding4" type="HBoxContainer" parent="VBoxContainer/membersbar3"]
margin_left = 231.0
margin_right = 271.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )

[node name="nextmode" type="TextureButton" parent="VBoxContainer/membersbar3"]
margin_left = 275.0
margin_right = 325.0
margin_bottom = 50.0
texture_normal = ExtResource( 7 )

[node name="flex3" type="HBoxContainer" parent="VBoxContainer/membersbar3"]
margin_left = 329.0
margin_right = 375.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="levels" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 499.0
margin_right = 375.0
margin_bottom = 549.0

[node name="flex2" type="HBoxContainer" parent="VBoxContainer/levels"]
margin_right = 53.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="prevlvl" type="TextureButton" parent="VBoxContainer/levels"]
margin_left = 57.0
margin_right = 107.0
margin_bottom = 50.0
texture_normal = ExtResource( 4 )

[node name="padding3" type="HBoxContainer" parent="VBoxContainer/levels"]
margin_left = 111.0
margin_right = 151.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )

[node name="Label" type="Label" parent="VBoxContainer/levels"]
margin_left = 155.0
margin_top = 12.0
margin_right = 220.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
text = "Level 1"

[node name="padding4" type="HBoxContainer" parent="VBoxContainer/levels"]
margin_left = 224.0
margin_right = 264.0
margin_bottom = 50.0
rect_min_size = Vector2( 40, 0 )

[node name="nextlvl" type="TextureButton" parent="VBoxContainer/levels"]
margin_left = 268.0
margin_right = 318.0
margin_bottom = 50.0
texture_normal = ExtResource( 7 )

[node name="flex3" type="HBoxContainer" parent="VBoxContainer/levels"]
margin_left = 322.0
margin_right = 375.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="sizedbox" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 553.0
margin_right = 375.0
margin_bottom = 573.0
rect_min_size = Vector2( 0, 20 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 577.0
margin_right = 375.0
margin_bottom = 597.0

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 166.0
margin_right = 209.0
margin_bottom = 20.0
text = "PLAY"
flat = true

[connection signal="pressed" from="VBoxContainer/appbar/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="VBoxContainer/membersbar/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="VBoxContainer/membersbar/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="VBoxContainer/membersbar2/prevart" to="." method="_on_prevart_pressed"]
[connection signal="pressed" from="VBoxContainer/membersbar2/nextart" to="." method="_on_nextart_pressed"]
[connection signal="pressed" from="VBoxContainer/membersbar3/prevmode" to="." method="_on_prevmode_pressed"]
[connection signal="pressed" from="VBoxContainer/membersbar3/nextmode" to="." method="_on_nextmode_pressed"]
[connection signal="pressed" from="VBoxContainer/levels/prevlvl" to="." method="_on_prevlvl_pressed"]
[connection signal="pressed" from="VBoxContainer/levels/nextlvl" to="." method="_on_nextlvl_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/Button" to="." method="_on_Button_pressed"]
